# ClickUp_Bot

./: .gitignore  README.md  app.py  clickup_fetcher.py  pyproject.toml  requirements.txt
static/: app.js  styles.css
templates/: index.html
